add vcpkg, other changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,17 @@ set(CMAKE_CXX_STANDARD 11)
 # file(GLOB_RECURSE SOURCES "src/*.cc")
 # Находим библиотеки Boost
 find_package(Boost COMPONENTS asio REQUIRED)
+find_package(GTest REQUIRED)
+include_directories(${GTest_INCLUDE_DIRS})
 
-# Добавляем файлы исходного кода
-add_executable(sender sender.cc)
-add_executable(receiver receiver.cc)
+add_executable(test_data_handler test_data_handler.cpp)
+target_link_libraries(test_data_handler gtest)
+# # Добавляем файлы исходного кода
+# add_executable(sender sender.cc)
+# add_executable(receiver receiver.cc)
 
-# Указываем зависимости
-target_link_libraries(sender ${Boost_LIBRARIES} pthread)
-target_link_libraries(receiver ${Boost_LIBRARIES} pthread)
+# # Указываем зависимости
+# target_link_libraries(sender ${Boost_LIBRARIES} pthread)
+# target_link_libraries(receiver ${Boost_LIBRARIES} pthread)
 # add_executable(ShareIT ${SOURCES})
 # target_link_libraries(ShareIT pthread)
